optimisation and broken link fixes

--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <a class="dropdown-item" href="/about/terms">Terms</a>
                 </div>
               </li>
-              <li class="nav-item">
+              <li class="nav-item menu-sign-in">
                 <a class="nav-link" href="https://nuvla.io/ui/sign-in" id="navbarDropdownMenuLink-sign-in" aria-haspopup="true" aria-expanded="false">Sign In</a>
               </li>
               <li class="nav-item">
