--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -36,7 +36,7 @@
 							<li class="fw400">SixSq, c/o Concort Growth Services</li>
 							<li class="fw400">16B Venetia Tower, Raisina</li>
 							<li class="fw400">Sector 59, Delhi NCR India</li>
-							<li class="fw400"><a href="www.concort.co">www.concort.co</a></li>
+							<li class="fw400"><a href="https://www.concort.co">www.concort.co</a></li>
             </ul>
 					</div>
 				</div>
