--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -15,7 +15,6 @@
 					</div>
 					<div class="col-md-4 text-right terms">
 						<p><a href="/about/terms">Terms &amp; conditions</a></p>
-						<p><a href="#" id="to-the-top" class="to-the-top"><i class="fas fa-arrow-up"></i></a></p>
 					</div>
 			</div>
 		</div>
@@ -29,6 +28,10 @@
 				<li><a href="http://github.com/nuvla"><i class="fab fa-github"></i></a></li>
 			</ul>
 		</div>
+
+<!-- Return to Top -->
+<a href="javascript:" id="return-to-top"><i class="fas fa-chevron-up"></i></a>
+
 
 <!-- Freshdesk -->
 
