--- a/sass/theme/_footer.scss
+++ b/sass/theme/_footer.scss
@@ -196,21 +196,44 @@ footer {
 					display: block;
 				}	
 			}
-			p {
-				.to-the-top {
-					color: $color-primary;
-					width: 30px;
-					height: 30px;
-					margin-left: 5px;
-					border-radius: 20px;
-					background: $light;
-					padding-right: 9px;
-					padding-top: 3px;
-					@media (max-width: 767px) {
-						padding-right: 0px;
-					}
-				}
-			}
 		}
 	}
 }
+
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    z-index: 1000;
+}
+#return-to-top svg {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+///* Extra Things */
+//body{background: #eee ;font-family: 'Open Sans', sans-serif;}h3{font-size: 30px; font-weight: 400;text-align: center;margin-top: 50px;}h3 i{color: #444;}
