--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -103,7 +103,14 @@
     		}
       }
       a.link {
-        text-decoration: underline !important; }
+        text-decoration: underline !important;
+      }
+    }
+    .menu-sign-in {
+      margin-left: 10px;
+      @include mobile {
+        margin-left: 0px;
+      }
     }
   }
 }
