--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -9,6 +9,11 @@
 			max-width: 100%;
 		}
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 	.icon-is-it-for {
 		min-height: 450px;
     ol, ul {
