--- a/sass/theme/_reset.scss
+++ b/sass/theme/_reset.scss
@@ -417,6 +417,9 @@ td, th {
 .bg-grey-f9 {
 	background: $bg-grey-f9;
 }
+.bg-grey-e4 {
+	background: $bg-grey-e4;
+}
 .bg-white {
 	background: #fff;
 }
