--- a/sass/theme/_variables.scss
+++ b/sass/theme/_variables.scss
@@ -11,6 +11,7 @@ $color-primary 			 : #9B1313;
 $color-primary-light : #DF3123;
 $gray-footer         : #E4E6E7;
 $bg-grey-f9		       : #f9f9f9;
+$bg-grey-e4		       : $gray-footer;
 $light			         : #fff;
 $dark     		  		 : #000;
 $header-sticky       : #333;
