--- a/_layouts/casestudies-overview.html
+++ b/_layouts/casestudies-overview.html
@@ -16,16 +16,9 @@
 				</div>
 			</div>
 		</section>
-		<div class="justify-content-center minimum-height:1000px">
-      {% for post in site.solutions %}
-        {% if post.product == page.product %}
-          {% if post.class == 'usecase' %}
-            <div class="widget-section text-center mt-20 mb-20"><i class="fas fa-circle"></i></div>
-            {% include highlighted-with-image-full-width-item.html %}
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-    </div>
+    {% if page.video-id %}
+      {% include video.html video-id='l8XD8bHceOY' title='Here\'s the challenge' %}
+    {% endif %}
 		<!-- Start what do you get? -->	
 		<section class="mt-20 section-is-it-for">
 			<div class="container">
