--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -57,21 +57,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="bg-white mt-20 section-is-it-for">
-			<div class="container">
-				<div class="row justify-content-center pt-50">
-					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">Here have a look.</h2>
-					</div>
-				</div>
-        <div class="pt-20 pb-50">
-        <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/BHzbEDzyfnQ' frameborder='0' allowfullscreen></iframe></div>
-			</div>
-        <!-- <div class="row justify-content-center icon-is-it-for pb-50 pt-50">
-          <iframe src="https://www.youtube.com/embed/BHzbEDzyfnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div> -->
-			</div>
-		</section>
+    {% include video.html video-id='BHzbEDzyfnQ' title='Here have a look' bg='bg-white' %}
 		<!-- End Who is it for? -->	
     {% include whats-next.html %}
 		<!-- End Section News -->	
