fix what's next broken link and add og metadata

--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -4,7 +4,7 @@
 				<div class="container">
 					<div class="content-text text-center text-white pb-50 pt-80">
 						<h2 class="text-white fw700">What’s next?</h2>
-						<h3 class="text-white fw600">Start your own journey on <a href="/nuvla-io/overview">Nuvla.io</a></h3>
+						<h3 class="text-white fw600">Start your own journey on <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a></h3>
 						<p><a class="text-white btn-sixsq mt-20 text-center" href="https://nuvla.io/ui/sign-up"><i class="far fa-plus-square"></i>  Sign up</a></p>
 					</div>
 				</div>
