--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}{{ site.keywords }}{% endif %}">
 	<meta charset="UTF-8">
 	<title>SixSq | {{ page.title }}</title>
+  
+  <meta property="og:title" content="{{ page.title }}"/>
+  {% if page.image %}
+    {% assign image = page.image %}
+  {% else %}
+    {% assign image = "/img/logo/logo_sixsq.png" %}
+  {% endif %}
+  <meta property="og:image" content="{{ site.url }}{{ image }}"/>
+  <meta property="og:description" content="{{ page.summary }}"/>
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />  
+  
   <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/v4-shims.js"></script>
 
