Update terms - Add definitions for apps, third party apps provider - Add SLA - Add Services section

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,7 +6,7 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
-		<section class="section-article mt-20">
+		<section class="section-article mt-20 {{ page.cssclass }}">
       <div class="container">
         {{ page.content }}
       </div>
