--- a/css/main.css
+++ b/css/main.css
@@ -1385,8 +1385,13 @@ td, th {
   /* Safari 6.0 - 9.0 */
   filter: grayscale(0%); }
 
+.terms ol {
+  list-style: decimal !important; }
+
 .section-article {
-  margin-bottom: 100px; }
+  margin-bottom: 100px;
+  font-size: 16px;
+  font-weight: 400; }
   .section-article h1 {
     margin-top: 20px;
     margin-bottom: 20px; }
