--- a/sass/theme/_section-article.scss
+++ b/sass/theme/_section-article.scss
@@ -1,6 +1,8 @@
 //-------- Section-About --------//
 .section-article {
   margin-bottom: 100px;
+  font-size: 16px;
+  font-weight: 400;
 	h1 {
     margin-top: 20px;
     margin-bottom: 20px;
