add awesomefont pro

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta property="og:description" content="{{ page.summary }}"/>
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />  
   
-  <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/v4-shims.js"></script>
+  <script src="https://kit.fontawesome.com/f02ec30b9d.js" crossorigin="anonymous"></script>
 
 	<!--
 		CSS
