--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -16,6 +16,9 @@
                 <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-pricing" href="/products-and-services/{{ page.product }}/pricing">Pricing</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
               </li>
             </ul>
