--- a/css/main.css
+++ b/css/main.css
@@ -1034,6 +1034,18 @@ td, th {
     margin: inherit;
     padding: 0px 0px 20px 25px;
     list-style: inherit; }
+  .section-is-it-for .icon-is-it-for .icon-pricing {
+    background-color: #fff; }
+  .section-is-it-for .icon-is-it-for .circle {
+    margin: 0 30px;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    font-size: 30px;
+    color: #fff;
+    line-height: 130px;
+    text-align: center;
+    background: #333; }
   .section-is-it-for .icon-is-it-for .icon {
     padding: 40px;
     height: 100%; }
