--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -21,6 +21,20 @@
       padding: 0px 0px 20px 25px;;
       list-style: inherit;
     }
+    .icon-pricing {
+			background-color: #fff;
+    }
+    .circle {
+      margin: 0 30px;
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      font-size: 30px;
+      color: #fff;
+      line-height: 130px;
+      text-align: center;
+      background: #333
+    }              
 		.icon {
 			padding: 40px;
 			height: 100%;
