--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -23,6 +23,10 @@
             {% endif %}
           {% endfor %}
         </div>
+        <h3 class="pb-20" id="app-deployment-detail">Some important details</h3>
+        <h4 class="pb-20">Here's an aspect of our pricing that's worth taking a moment to understand, as it could provide you with additional savings.  And if you have a question, just get in touch.</h4>
+        <h4 class="pb-20">We give you 5 free app deployments for each active NuvlaBox. These are used in the global calculation of app deployments. So if you use small hardware or run few app deployments in your NuvlaBoxes, they will lower or even cancel app deployment fees for app deployments running in non-NuvlaBox environments (e.g. Kubernetes or Docker Swarm cluster you might be running in the public or private cloud).</h4>
+        <h4 class="pb-50">This means the more you do at the edge, the more it will subsidise your app deployments in the cloud. And since edge-to-cloud applications are on the rise, you will be able to take advantage of these with us.</h4>
 			</div>
 		</section>
 		<!-- Stop what do you get? -->
