fix nuvlabox logo size

--- a/_layouts/nuvlabox-hardware.html
+++ b/_layouts/nuvlabox-hardware.html
@@ -10,7 +10,10 @@
       	<div class="container">
       		<div class="row justify-content-center mb-20">
       			<div class="col-md-12 section-title text-center">
-      				<h2 class="pb-10 fw700">Hardware to transform into a <img class="pb-15" src="/img/logo/logo_nuvlabox_black.png"/></h2>
+      				<h2 class="pb-10 fw700">Hardware to transform into a</h2>
+      			</div>
+      			<div class="col-md-3 section-title text-center">
+              <img class="pb-15" style="max-width: none;" src="/img/logo/logo_nuvlabox_black.png"/>
       			</div>
       		</div>
           <div id="nuvlabox-product-description" class="col-md-12 text-center mb-20">
