--- a/_layouts/casestudies-overview.html
+++ b/_layouts/casestudies-overview.html
@@ -10,7 +10,7 @@
 			<div class="container">
 				<div class="row justify-content-center pt-20 pb-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-20 fw700">Discover how <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a> enables {{ page.product-name }}</h2>
+						<h2 class="pb-20 fw700">Discover how <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a> enables {{ page.product-name }}, at the edge as a service</h2>
             {{ page.content | markdownify }}
 					</div>
 				</div>
