move back to top on the left

--- a/css/main.css
+++ b/css/main.css
@@ -2209,7 +2209,7 @@ footer .footer-content {
 #return-to-top {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   background: black;
   background: rgba(0, 0, 0, 0.7);
   width: 50px;
