--- a/sass/theme/_footer.scss
+++ b/sass/theme/_footer.scss
@@ -203,7 +203,7 @@ footer {
 #return-to-top {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     background: rgb(0, 0, 0);
     background: rgba(0, 0, 0, 0.7);
     width: 50px;
