comment the floating badge on the right

--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -20,14 +20,14 @@
 		</div>
 	</footer>
 	<!-- End Footer -->
-		<div id="social" class="social_side_links animated">
-			<ul>
-				<li><a href="https://twitter.com/sixsq" target="_blank"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="https://www.linkedin.com/company/sixsq" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-				<li><a href="mailto:info@sixsq.com"><i class="fas fa-envelope"></i></a></li>
-				<li><a href="http://github.com/nuvla"><i class="fab fa-github"></i></a></li>
-			</ul>
-		</div>
+    <!-- <div id="social" class="social_side_links animated">
+      <ul>
+        <li><a href="https://twitter.com/sixsq" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/company/sixsq" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="mailto:info@sixsq.com"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="http://github.com/nuvla"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div> -->
 
 <!-- Return to Top -->
 <a href="javascript:" id="return-to-top"><i class="fas fa-chevron-up"></i></a>
