add custom variabe

--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -65,7 +65,8 @@
 
 <script>
   window.intercomSettings = {
-    app_id: "qjggmp6w"
+    app_id: "qjggmp6w",
+    website: "sixsq.com"
   };
 </script>
 
