--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -1,12 +1,10 @@
 		<!-- Start Contact -->
 		<section class="section-contact">
-			<div class="row image-contact-us animated">
-				<div class="container">
-					<div class="content-text text-center text-white pb-50 pt-80">
-						<h2 class="text-white fw700">What’s next?</h2>
-						<h3 class="text-white fw600">Start your own journey on <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a></h3>
-						<p><a class="text-white btn-sixsq mt-20 text-center" href="https://nuvla.io/ui/sign-up"><i class="far fa-plus-square"></i>  Sign up</a></p>
-					</div>
+			<div class="row image-contact-us animated justify-content-center">
+				<div class="col-md-4 content-text text-center text-white pb-50 pt-80">
+					<h2 class="text-white fw700 pb-20">What’s next?</h2>
+					<h3 class="text-white fw600" style="line-height: 1.4;">Start your own journey to the edge with the <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a> edge management platform, delivered as a service</h3>
+					<p><a class="text-white btn-sixsq mt-30 text-center" href="https://nuvla.io/ui/sign-up"><i class="far fa-plus-square"></i>  Sign up</a></p>
 				</div>
 			</div>
 		</section>
