--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -18,18 +18,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Software</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
-                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software that turns your hardware into a Smart Edge Device</a>
-                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: The open source software behind Nuvla.io</a>
+                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox:</b> Software that turns your hardware into a Smart Edge Device</a>
+                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla:</b> The open source software behind Nuvla.io</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-solutions">
-                  <a class="dropdown-item" href="/casestudies/city/overview"><b>City</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
-                  <a class="dropdown-item" href="/casestudies/outpost/overview"><b>Outpost</b>: Rapid infrastructure for remote areas</a>
-                  <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail</b>: In-store (real-time) analytics</a>
+                  <a class="dropdown-item" href="/casestudies/city/overview"><b>City:</b> Edge, Cloud and IoT solutions for Smart Cities</a>
+                  <a class="dropdown-item" href="/casestudies/outpost/overview"><b>Outpost:</b> Rapid infrastructure for remote areas</a>
+                  <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail:</b> In-store (real-time) analytics</a>
                   <!-- <a class="dropdown-item" href="/casestudies/factory/overview"><b>Factory</b>: Smart manufacturing</a> -->
-                  <a class="dropdown-item" href="/casestudies/science/overview"><b>Science</b>: Big Data at the Edge and in the Cloud for Science</a>
+                  <a class="dropdown-item" href="/casestudies/science/overview"><b>Science:</b> Big Data at the Edge and in the Cloud for Science</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
