--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -1,7 +1,4 @@
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M77XBLH"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->		<div class="common-header animated">
+    <div class="common-header animated">
 			<div class="container">
         <nav class="navbar navbar-toggleable-sm navbar-inverse main-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
