add target audience on main page

--- a/_includes/highlighted-with-image-item-no-truncation.html
+++ b/_includes/highlighted-with-image-item-no-truncation.html
@@ -1,4 +1,4 @@
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated {{ post.cssclass }}">
+					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated {{ post.cssclass }} pb-0">
             {% if post.image %}
               <img src="{{ post.image }}" alt="{{ post.title }}" style="max-width: 60%; width: auto;">
             {% endif %}
