--- a/_includes/welcome-partners-item.html
+++ b/_includes/welcome-partners-item.html
@@ -1,4 +1,4 @@
-<div class="item">
+<div class="item partner-item">
   <div class="mt-20 image-content">
 		<img src="{{ post.image }}" alt="partners-homepage">
 	</div>
