--- a/_includes/welcome-video.html
+++ b/_includes/welcome-video.html
@@ -1,16 +1,16 @@
-						<div class="col-lg-6 col-md-6 col-sm-12 video-section">
+						<div class="col-lg-6 col-md-6 col-sm-12 video-section" style="align-item: center; display: flex; flex-direction: column; justify-content: space-between">
 							<div class="section-title text-center">
 								<h2 class="pb-10 fw600">{{ post.title }}</h2>
-								<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
+								<div class="widget-section text-center mt-20 mb-15"><i class="fas fa-circle"></i></div>
 							</div>
-							<div class="content-video mt-15 video">
-								<iframe width="100%" src="{{ post.link }}" frameborder="0" allowfullscreen></iframe>
+							<div class="content-video video">
+								<iframe src="{{ post.link }}" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="desc mt-15">
 								<h3 class="fw600"><a href="{{ post.link }}">{{ post.subtitle }}</a></h3>
 								<p>{{ post.content }}</p>
 							</div>
-							<div class="section-news-button float-right mb-10">
+							<div class="section-news-button mb-20 mr-20" style="align-self: flex-end;">
 								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Watch</a>
 								<a class="btn-sixsq all" href="/media/videos"><i class="far fa-plus-square"></i>  All videos</a>
 							</div>
