--- a/css/main.css
+++ b/css/main.css
@@ -1834,7 +1834,7 @@ td, th {
         background: #333; }
 
 .section-newsletter {
-  padding: 40px;
+  padding: 50px;
   background: #EDF0F1;
   z-index: 120; }
   .section-newsletter .title-need-contact {
@@ -1890,7 +1890,7 @@ td, th {
   color: #fff;
   cursor: pointer;
   background: #333;
-  margin: 20px 0;
+  margin: 20px 0 0 0;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -1913,11 +1913,14 @@ td, th {
     outline: none; }
 
 .section-partners .owl-dots {
-  margin-top: 20px; }
+  margin-top: 40px; }
 
 @media (max-width: 767px) {
   .section-news {
-    padding-bottom: 60px; } }
+    padding-bottom: 0px; } }
+@media (max-width: 767px) {
+  .section-news .row > div {
+    margin-bottom: 50px; } }
 .section-news .active-screen-news .item {
   display: block; }
   .section-news .active-screen-news .item .image-content {
@@ -1929,9 +1932,11 @@ td, th {
       max-height: 150px; }
       @media (max-width: 767px) {
         .section-news .active-screen-news .item .image-content img {
-          max-height: inherit;
-          width: 100%;
-          height: 100%; } }
+          display: block;
+          max-width: 350px;
+          max-height: 150px;
+          width: auto;
+          height: auto; } }
   .section-news .active-screen-news .item .content-text {
     font-size: 100%; }
   .section-news .active-screen-news .item .overlay-bg-1 {
@@ -1946,8 +1951,11 @@ td, th {
   right: 0;
   bottom: 0;
   margin-left: 15px;
-  margin-top: -25px;
+  margin-top: -30px;
   margin-bottom: 25px; }
+  @media (max-width: 767px) {
+    .section-news .active-screen-news .owl-controls {
+      margin-top: -30px; } }
   .section-news .active-screen-news .owl-controls .owl-dots .owl-dot {
     width: 12px;
     height: 12px;
@@ -1959,17 +1967,21 @@ td, th {
     .section-news .active-screen-news .owl-controls .owl-dots .owl-dot.active {
       position: relative;
       background: #9B1313; }
-.section-news .video-section {
-  margin-bottom: 30px; }
-  @media (max-width: 767px) {
-    .section-news .video-section {
-      margin-top: 100px;
-      margin-bottom: 100px; } }
-  .section-news .video-section .content-video {
-    height: 60%; }
-    .section-news .video-section .content-video iframe {
-      height: 100%;
-      width: 100%; }
+@media (max-width: 767px) {
+  .section-news .video-section {
+    margin-top: 50px;
+    margin-bottom: 50px; } }
+.section-news .video-section .content-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  height: 0; }
+  .section-news .video-section .content-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
 
 .mfp-counter {
   display: none; }
