--- a/sass/theme/_section-news.scss
+++ b/sass/theme/_section-news.scss
@@ -1,13 +1,18 @@
 .section-partners {
   .owl-dots {
-    margin-top: 20px;
+    margin-top: 40px;
   }
 }
 
 .section-news {
 	@media (max-width: 767px) {
-		padding-bottom: 60px;
+		padding-bottom: 0px;
 	}
+  .row > div {
+  	@media (max-width: 767px) {
+      margin-bottom: 50px;;
+    }
+  }
 	.active-screen-news {
 		.item {
 			display: block;
@@ -19,9 +24,11 @@
           height: auto;
           max-height: 150px;
       		@media (max-width: 767px) {
-            max-height: inherit;
-            width: 100%;
-            height: 100%;
+            display: block;
+            max-width: 350px;
+            max-height: 150px;
+            width: auto;
+            height: auto;
       		}
 				}
 			}
@@ -42,8 +49,11 @@
 			right: 0;
 			bottom: 0;
 			margin-left: 15px;
-			margin-top: -25px;
+			margin-top: -30px;
 			margin-bottom: 25px;
+  		@media (max-width: 767px) {
+        margin-top: -30px;
+      }
 			.owl-dots {
 				.owl-dot {
 					width: 12px;
@@ -62,16 +72,20 @@
 		}
 	}
 	.video-section {
-    margin-bottom: 30px;
 		@media (max-width: 767px) {
-			margin-top: 100px;
-			margin-bottom: 100px;
+			margin-top: 50px;
+			margin-bottom: 50px;
 		}
 		.content-video {
-			height: 60%;
+    	position: relative;
+    	padding-bottom: 56.25%; /* 16:9 */
+    	height: 0;
 			iframe {
-				height: 100%;
-				width: 100%;
+      	position: absolute;
+      	top: 0;
+      	left: 0;
+      	width: 100%;
+      	height: 100%;
 			}
 		}
 	}
