--- a/_includes/nuvlabox-sub-menu.html
+++ b/_includes/nuvlabox-sub-menu.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product}}/overview">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features">Features</a>
+                <a class="nav-link" id="navbarMenuLink-feature" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
