--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -13,10 +13,13 @@
                 <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product }}/overview">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features">Features</a>
+                <a class="nav-link" id="navbarMenuLink-feature" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-pricing" href="/products-and-services/{{ page.product }}/pricing">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-security" href="/products-and-services/{{ page.product }}/security">Security</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
