--- a/_layouts/nuvla-io-security.html
+++ b/_layouts/nuvla-io-security.html
@@ -23,7 +23,7 @@
 							<h2 class="pb-10 fw700">Discover the main security features.</h2>
 					</div>
 				</div>
-				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
+				<div class="row justify-content-center icon-is-it-for pb-50">
           {% for post in site.products-and-services %}
             {% if post.product == page.product %}
               {% if post.class == page.class %}
