--- a/_layouts/product-features.html
+++ b/_layouts/product-features.html
@@ -18,7 +18,7 @@
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
           {% for post in site.products-and-services %}
             {% if post.product == page.product or page.uberproduct == post.product %}
-              {% if post.class == 'feature' %}
+              {% if post.class == page.class %}
                 {% include highlighted-with-image-item-no-truncation.html %}
               {% endif %}
             {% endif %}
