--- a/_includes/welcome-media-item.html
+++ b/_includes/welcome-media-item.html
@@ -20,6 +20,6 @@
 	</div>
 	<div class="section-news-button ml-20" style="align-self: flex-end;">
     <a class="btn-sixsq color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Learn more</a>
-	  <a class="btn-sixsq all mr-20" href="/media/news"><i class="far fa-plus-square"></i>  All news</a>
+	  <a class="btn-sixsq all mr-20" href="/media/news"><i class="far fa-plus-square"></i>  All {{ include.action-all }}</a>
 	</div>
 </div>
