--- a/_layouts/nuvla-io-security.html
+++ b/_layouts/nuvla-io-security.html
@@ -7,9 +7,9 @@
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
 		<!-- Start what do you get? -->	
-		<section class="pt-20 section-is-it-for bg-white">
+		<section class="section-is-it-for bg-white">
 			<div class="container">
-				<div class="row justify-content-center pb-50 pt-50">
+				<div class="row justify-content-center pb-50 pt-20">
 					<div class="col-md-12 section-title">
             {{ page.content | markdownify }}
 					</div>
