--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -1,4 +1,22 @@
 .section-is-it-for {
+  h2 {
+    @extend .fw700;
+    @extend .pb-30;
+    font-size: 30px;
+  }
+  p {
+    color: $text-color;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: 400;
+    font-family: $title-font;
+    font-size: 18px;
+    line-height: 1.5em;
+  }
+  ul {
+    font-size: 18px;
+    font-weight: normal;
+  }
   img {
     width: 100%;
   }
