New icons, improved layout

--- a/_layouts/product-simple.html
+++ b/_layouts/product-simple.html
@@ -6,7 +6,7 @@
   	<main>
       {% include {{ page.product }}-banner.html %}
       {% include {{ page.product }}-sub-menu.html %}
-      <section class="section-intro-product section-intro-product bg-white">
+      <section class="section-intro-product section-intro-product section-is-it-for bg-white">
       	<div class="container">
           {{ page.content | markdownify }}
         </div>
