--- a/_includes/video.html
+++ b/_includes/video.html
@@ -3,7 +3,7 @@
 {% else %}
   {% assign bg = 'bg-grey-e4' %}
 {% endif %}
-		<section class="pt-50 pb-20 section-is-it-for {{ bg }}">
+		<section class="pt-40 section-is-it-for {{ bg }}">
 			<div class="container">
 				<div class="row justify-content-center pb-50">
 					<div class="col-md-8 section-title text-center">
