--- a/_layouts/nuvla-io-security.html
+++ b/_layouts/nuvla-io-security.html
@@ -8,17 +8,13 @@
     {% include {{ page.product }}-sub-menu.html %}
 		<!-- Start what do you get? -->	
 		<section class="section-is-it-for bg-white">
-			<div class="container">
-				<div class="row justify-content-center pb-50 pt-20">
-					<div class="col-md-12 section-title">
-            {{ page.content | markdownify }}
-					</div>
-				</div>
+			<div class="container pt-20 pb-50">
+        {{ page.content | markdownify }}
 			</div>
 		</section>
 		<section class="mt-20 section-is-it-for">
 			<div class="container">
-				<div class="row justify-content-center pb-50 pt-50">
+				<div class="row justify-content-center pb-20 pt-30">
 					<div class="col-md-12 section-title text-center">
 							<h2 class="pb-10 fw700">Discover the main security features.</h2>
 					</div>
