--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -7,13 +7,13 @@
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
 		<!-- Start what do you get? -->	
-		<section class="pt-20 section-is-it-for bg-grey-e4">
+		<section class="section-is-it-for">
+			<div class="container pt-20 pb-50">
+        {{ page.content | markdownify }}
+      </div>
+		</section>
+		<section class="mt-20 section-is-it-for">
 			<div class="container">
-				<div class="row justify-content-center pb-50 pt-50">
-					<div class="col-md-12 section-title">
-            {{ page.content | markdownify }}
-					</div>
-				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 bg-grey1">
           {% for post in site.products-and-services %}
             {% if post.product == page.product %}
