--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -13,9 +13,16 @@
     font-size: 18px;
     line-height: 1.5em;
   }
-  ul {
+  ul, ol {
     font-size: 18px;
     font-weight: normal;
+  }
+  ol {
+    list-style-type: decimal;
+  }
+  li {
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
   img {
     width: 100%;
