--- a/_includes/welcome-media-item.html
+++ b/_includes/welcome-media-item.html
@@ -19,12 +19,7 @@
     </div>
 	</div>
 	<div class="section-news-button ml-20" style="align-self: flex-end;">
-  {% if include.action-all == "Blogs" %}
-    <a class="btn-sixsq color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Read blog</a>
-	  <a class="btn-sixsq all mr-20" href="https://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  All {{ include.action-all }}</a>
-    {% else %}
-    <a class="btn-sixsq color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Read news</a>
+    <a class="btn-sixsq color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Learn more</a>
 	  <a class="btn-sixsq all mr-20" href="/media/news"><i class="far fa-plus-square"></i>  All {{ include.action-all }}</a>
-  {% endif %}
 	</div>
 </div>
