--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -12,7 +12,7 @@
 					</div>
 				</div>
 				<div class="row mt-30 footer-content mb-10">
-					<div class="col-md-4">
+					<div class="col-md-6 text-center">
 						<h4>Headquarters:</h4>
 						<ul>
 							<li class="fw400">SixSq</li>
@@ -21,16 +21,7 @@
 							<li class="fw400">Switzerland</li>
 						</ul>
 					</div>
-					<div class="col-md-4 contact">
-						<h4>North American Office:</h4>
-						<ul>
-							<li class="fw400">SixSq, c/o RHEA</li>
-							<li class="fw400">6700 Côte de Liesse, Suite 102</li>
-							<li class="fw400">Montréal (St-Laurent), Québec, H4T 2B5</li>
-							<li class="fw400">Canada</li>
-						</ul>
-					</div>
-					<div class="col-md-4 contact">
+					<div class="col-md-6 contact text-center">
 						<h4>Asia Pacific:</h4>
 						<ul>
 							<li class="fw400">SixSq, c/o Concort Growth Services</li>
