--- a/_includes/welcome-media-item.html
+++ b/_includes/welcome-media-item.html
@@ -11,9 +11,15 @@
 			{% endif %}
 		{% endcapture %}
     <div style="min-height: 175px">
+    {% if include.action-all == "Blogs" %}
+      <a href="{{ post.link }}">
+        <h3 class="mb-10">{{ _title }}</h3>
+      </a>
+    {% else %}
       <a href="{{ post.url }}">
         <h3 class="mb-10">{{ _title }}</h3>
       </a>
+    {% endif %}
   		<p>{{ post.content | strip_html | truncatewords: 30 }}</p>
   		<p class="date">{{ post.date | date: "%d %B %Y" }}</p>
     </div>
@@ -22,7 +28,7 @@
   {% if include.action-all == "Blogs" %}
     <a class="btn-sixsq color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Read blog</a>
 	  <a class="btn-sixsq all mr-20" href="https://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  All {{ include.action-all }}</a>
-    {% else %}
+  {% else %}
     <a class="btn-sixsq color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Read news</a>
 	  <a class="btn-sixsq all mr-20" href="/media/news"><i class="far fa-plus-square"></i>  All {{ include.action-all }}</a>
   {% endif %}
