--- a/css/main.css
+++ b/css/main.css
@@ -1126,6 +1126,18 @@ td, th {
   width: 100%;
   height: 100%; }
 
+.highlight-image {
+  padding: 40px;
+  height: 100%; }
+  .highlight-image:hover {
+    padding: 40px;
+    background: #fff;
+    box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease; }
+
 .section-do-you-get .product-page-carousel {
   min-height: 520px; }
   @media (max-width: 767px) {
