--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -140,6 +140,7 @@
   overflow: hidden;
   max-width: 100%;
 }
+
 .embed-container iframe, .embed-container object, .embed-container embed {
   position: absolute;
   top: 0;
@@ -147,4 +148,18 @@
   width:
   100%;
   height: 100%;
+}
+
+.highlight-image {
+	padding: 40px;
+	height: 100%;
+	&:hover {
+		padding: 40px;
+		background: #fff;
+		box-shadow: $hover-shadow-icon;
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		transition: all 0.5s ease;
+	}
 }
