--- a/css/main.css
+++ b/css/main.css
@@ -1131,12 +1131,20 @@ td, th {
   height: 100%; }
   .highlight-image:hover {
     padding: 40px;
-    background: #fff;
     box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.1);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease; }
+  @media (max-width: 767px) {
+    .highlight-image {
+      padding: 40px;
+      width: 100%;
+      box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.1);
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      transition: all 0.5s ease; } }
 
 .section-do-you-get .product-page-carousel {
   min-height: 520px; }
