--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -155,7 +155,15 @@
 	height: 100%;
 	&:hover {
 		padding: 40px;
-		background: #fff;
+		box-shadow: $hover-shadow-icon;
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		transition: all 0.5s ease;
+	}
+	@include mobile {
+		padding: 40px;
+    width: 100%;
 		box-shadow: $hover-shadow-icon;
 		-webkit-transition: all 0.5s ease;
 		-moz-transition: all 0.5s ease;
