--- a/_layouts/nuvla-io-marketplace.html
+++ b/_layouts/nuvla-io-marketplace.html
@@ -35,20 +35,20 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-12 section-title">
-							<h2 class="fw700 text-center">App Integration - Limited offer October only: free!</h2>
+							<h2 class="fw700 text-center">Limited offer October only: free app integration!</h2>
 
               <h3>We are nearing the official launch date of the Nuvla.io Marketplace.</h3>
               <p>
-In preparation, we are offering to app vendors and start-ups free integration in October. This is the easiest way to take advantage of having your apps deployed at scale and in a click at the edge and in the cloud.
+In preparation, we are offering free integration to app vendors and start-ups in October. This is the easiest way have your apps deployed at scale and in a click at the edge and in the cloud.
               </p>
               <h3 class="pt-10">
 What do we expect from you?
               </h3>
 <ul class="bulleted-list pb-10" style="padding-left: 20px;">
-  <li>Package you app as Docker containers.</li>
+  <li>Package your app as Docker containers.</li>
   <li>Apps for the edge must be either a single Docker container, or Docker Compose or Docker Swarm.</li>
-  <li>Apps for the cloud can be as for the edge or Kubernetes Manifest (depends on what infrastructure your customers run)</li>
-  <li>We recommend you upload your images in a registry protected by username/password</li>
+  <li>Apps for the cloud can be as for the edge or Kubernetes Manifest (depends on what infrastructure your customers run).</li>
+  <li>We recommend you upload your images in a registry protected by username/password.</li>
   <li>Decide how much you want to charge for your app.</li>
   <li>Decide if you want your apps to be public or private (you share them with your customers).</li>
 </ul>
@@ -58,9 +58,9 @@ What can you expect from SixSq engineers?
               </h3>
 
 <ul class="bulleted-list pb-10" style="padding-left: 20px;">
-  <li>We will dedicate up to 2 days of engineering support</li>
-  <li>Walk you through the process if you are not familiar with Nuvla.io</li>
-  <li>Certify you app on the Nuvla.io platform</li>
+  <li>We will dedicate up to 2 days of engineering support.</li>
+  <li>Walk you through the process if you are not familiar with Nuvla.io.</li>
+  <li>Certify your app on the Nuvla.io platform.</li>
 </ul>
 
               <h3 class="pt-10">
@@ -68,10 +68,10 @@ What can you expect from Nuvla.io?
               </h3>
 
 <ul class="bulleted-list pb-10" style="padding-left: 20px;">
-  <li>Nuvla.io meters hourly and invoices monthly</li>
-  <li>You get paid as soon as the customer pays</li>
-  <li>We take a 20% fee</li>
-  <li>We can give you promotional coupons to help you promote your apps to customers</li>
+  <li>Nuvla.io meters hourly and invoices monthly.</li>
+  <li>You get paid as soon as the customer pays.</li>
+  <li>SixSq takes a fee and forwards the rest to you.</li>
+  <li>We can give you promotional coupons to help you promote your apps to customers.</li>
 </ul>
 
               <h3 class="pt-10">
