Add get in touch

--- a/_layouts/nuvla-io-marketplace.html
+++ b/_layouts/nuvla-io-marketplace.html
@@ -30,7 +30,7 @@
         </div>
 			</div>
     </section>
-		<section class="section-is-it-for bg-grey-f9 pt-50 pb-50">
+		<section class="section-is-it-for bg-grey-f9 pt-50 pb-70">
       <a class="anchor" id="integration"></a>
 			<div class="container">
 				<div class="row justify-content-center">
@@ -87,6 +87,7 @@ Here are a few resources you might find helpful to familiarise yourself with Nuv
 You will also find Case Studies on our website: <a href="/casestudies/city/overview">Smart City</a>, <a href="/casestudies/outpost/overview">Outpost and Field Clinics</a>, <a href="/casestudies/retail/overview">Retail</a>, <a href="/casestudies/science/overview">Big Data Science</a>.
               </p>
 
+						<h3 class="fw700 text-center pt-50">Interested? Get in touch by <a href="mailto:support@sixsq.com?subject=Marketplace app integration">email</a> or simply use the bot (bottom right widget).</h3>
 					</div>
 				</div>
 			</div>
