Go live Add chat widget link

--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -13,6 +13,9 @@
                 <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product }}/overview">Overview</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-marketplace" href="/products-and-services/{{ page.product }}/marketplace">Marketplace</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-feature" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
