--- a/_layouts/nuvla-io-marketplace.html
+++ b/_layouts/nuvla-io-marketplace.html
@@ -87,7 +87,7 @@ Here are a few resources you might find helpful to familiarise yourself with Nuv
 You will also find Case Studies on our website: <a href="/casestudies/city/overview">Smart City</a>, <a href="/casestudies/outpost/overview">Outpost and Field Clinics</a>, <a href="/casestudies/retail/overview">Retail</a>, <a href="/casestudies/science/overview">Big Data Science</a>.
               </p>
 
-						<h3 class="fw700 text-center pt-50">Interested? Get in touch by <a href="mailto:support@sixsq.com?subject=Marketplace app integration">email</a> or simply use the bot (bottom right widget).</h3>
+						<h3 class="fw700 text-center pt-50">Interested? Get in touch by <a href="mailto:support@sixsq.com?subject=Marketplace app integration">email</a> or simply use the <a href="javascript:void(0);" onclick="Intercom('show');">chat widget</a>.</h3>
 					</div>
 				</div>
 			</div>
